syntax = "proto3";

package information;

option go_package = "github.com/calmato/gran-book/api/proto/information";

import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";
import "information/inquiry_entity.proto";

service InquiryService {
  rpc CreateInquiry(CreateInquiryRequest) returns (InquiryResponse);
}

message CreateInquiryRequest {
  string user_id = 1 [
    (validate.rules).string = {
      min_len: 1
    }
  ];
  string subject = 2 [
    (validate.rules).string = {
      min_len: 1
      max_len: 64
    }
  ];
  string description = 3 [
    (validate.rules).string = {
      min_len: 1
      max_len: 1000
    }
  ];
  string email = 4 [
    (validate.rules).string = {
      min_len: 1
      max_len: 256
      email: true
    }
  ];
}

message InquiryResponse {
  Inquiry inquiry = 1;
}
